@@ -1,6 +1,6 @@
 // TortoiseMerge - a Diff/Patch program
 
-// Copyright (C) 2004-2011 - TortoiseSVN
+// Copyright (C) 2004-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -1157,6 +1157,8 @@ void CMainFrame::PatchSave()
     if (saveret==0)
     {
         // file was saved with 0 lines, remove it.
+        m_Patch.RemoveFile(m_Data.m_mergedFile.GetFilename());
+        // just in case
         DeleteFile(m_Data.m_mergedFile.GetFilename());
     }
     m_Data.m_mergedFile.StoreFileAttributes();
@@ -1225,6 +1227,7 @@ bool CMainFrame::FileSave(bool bCheckResolved /*=true*/)
         }
         if (bDelete)
         {
+            m_Patch.RemoveFile(m_Data.m_mergedFile.GetFilename());
             DeleteFile(m_Data.m_mergedFile.GetFilename());
         }
     }
